--- a/forever/www/apporder.html
+++ b/forever/www/apporder.html
@@ -253,7 +253,8 @@ a{color:inherit;text-decoration:none}
             </div>
             <div class="sign-up-htm">
                 <div class="item-section row mb-4" style="font-size: 12px; color: rgb(0, 0, 0);">
-                  {% for item in items %}
+                  {% if items %}
+                    {% for item in items %}
                     <div class="col-xs-12 item mb-1" >
                         <div class="row item-row">
                             <div class="col-xs-10 row">
@@ -265,7 +266,7 @@ a{color:inherit;text-decoration:none}
                               <div class="col-xs-9">
                                   <p class="m-0 item-name" id="{{ item.item_code }}">{{ item.item_name }}</p>
                                   <span class="m-0">{{ item.item_code }}</span>
-                                  <p class="m-0 rate"><strong>{{ item.standard_selling_rate }} BDT</strong> </p>
+                                  <p class="m-0 rate"><strong>{{ item.standard_selling_rate }} USD</strong> </p>
                                   <span class="m-0">{% if item.limit %}{{ item.limit }} pc {% else %} {% endif %}</span>
                                   <input type="hidden" class="item-id" value="{{ item.item_code }}">
                                   <input type="hidden" class="item-limit" value="{{ item.limit or 0 }}">
@@ -280,7 +281,12 @@ a{color:inherit;text-decoration:none}
                             </div>
                         </div>
                       </div>
-                    {% endfor %}
+                      {% endfor %}
+                    {% else %}
+                      <div class="col-xs-12 mb-5 text-center">
+                          <h1 class="mt-5" style="color: #a9a500;">No Item Added</h1>
+                    </div>
+                    {% endif %}
                     <div class="col-xs-12 row price-section hidden mt-5">
                         <div class="col-xs-8"><p class="m-0">Total Qty</p></div>
                         <div class="col-xs-4 text-right"><p id="total-qty" class="total-qty m-0"></p></div>
@@ -291,12 +297,14 @@ a{color:inherit;text-decoration:none}
                         <div class="col-xs-8" style="color: #a9a500;"><p class="m-0">Total Amount</p></div>
                         <div class="col-xs-4 text-right" style="color: #a9a500;"><p id="total-amm" class="total-amm m-0"></p></div>
                     </div>
+                    {% if items %}
                     <div id="process-to-last" class="group col-xs-12 mt-5">
                         <input id="process-to-last" type="submit" class="button" value="Preview">
                     </div>
                     <div id="order-create" class="group col-xs-12 mt-5 hidden">
                         <input id="order-create" type="submit" class="button" value="Preocess Order">
                     </div>
+                    {% endif %}
                 </div>
               <div id="qr-section" class="qr-section text-center hidden">
                     <div class="order-status mb-5">
@@ -402,21 +410,21 @@ a{color:inherit;text-decoration:none}
               let amount = total_amount;
               let formattedAmount = new Intl.NumberFormat('en-BD', {
                   style: 'currency',
-                  currency: 'BDT',
+                  currency: 'USD',
                   minimumFractionDigits: 2
               }).format(amount);
 
               let vat = (5 * total_amount) / 100;
               let formattedVat = new Intl.NumberFormat('en-BD', {
                   style: 'currency',
-                  currency: 'BDT',
+                  currency: 'USD',
                   minimumFractionDigits: 2
               }).format(vat);
 
               var main_total = amount + vat
               let formattedMainTotal = new Intl.NumberFormat('en-BD', {
                   style: 'currency',
-                  currency: 'BDT',
+                  currency: 'USD',
                   minimumFractionDigits: 2
               }).format(main_total);
               document.getElementById("total-qty").innerHTML = total_qty
