--- a/forever/www/apporder.html
+++ b/forever/www/apporder.html
@@ -757,7 +757,6 @@
             method: "forever.www.apporder.check_customer_information",
             args: args,
             callback: function(r) {
-                console.log()
                 if (r.message.customer_group) {
                     $('#customerGroup').val(r.message.customer_group);
                     $('#mobile').val(r.message.mobile);
@@ -789,8 +788,9 @@
         // No specific validation for step 3 in this case
         // step3.classList.remove("active");
         // step4.classList.add("active");
-        var customer = $('#customer').val();
+        var customer = $('#id').val();
         var customer_group = $('#customerGroup').val();
+        var mobile = $('#mobile').val();
         var itemsWithQty = [];
         var total_qty = 0;
         var error = 0
@@ -805,6 +805,7 @@
         let args = {
             customer: customer,
             customer_group: customer_group,
+            mobile : mobile,
             items : itemsWithQty
         }
         if (total_qty > 0) {
