chore: app order update.

--- a/forever/www/order/brandmaterial.html
+++ b/forever/www/order/brandmaterial.html
@@ -5,9 +5,6 @@
 
 {% block page_content %}
 <div class="container">
-    <div class="logo">
-        <a href="/website"><img  src="{{ logo_image }}" alt="Logo"></a>
-    </div>
     <h2>Brand Material</h2>
     <div class="brand">
         {% for material in brand_materials %}
@@ -24,7 +21,7 @@
     </div>
     
     <div class="back">
-        <button><a href="/website">Back to home</a></button>
+        <button><a href="/order/homepage">Back to home</a></button>
     </div>
 
     <p class="credit">Developed by <a href="https://invento.com.bd/">Invento Software Limited</a></p>
