chore4: apporder update 2

--- a/forever/www/order/items.html
+++ b/forever/www/order/items.html
@@ -194,7 +194,7 @@
                         {% else %}
                         <div id="share" class="share-container">
                             <a id="whatsapp-share-btn" href="#" target="_blank" class="share-btn whatsapp-btn download-btn">
-                                <img src="/order/css/images/whatsapp.png" alt="WhatsApp Icon" width="13"> Send to Official Whatsapp
+                                <img src="css/images/whatsapp.png" alt="WhatsApp Icon" width="13"> Send to Official Whatsapp
                             </a>
                             <p style="font-size: 14px;;line-height: 20px;color:#404040;margin-top: 1rem;">আপনার অর্ডারটি সম্পন্ন করার জন‍্য প্রথমে স্ক্রিনশট নিয়ে রাখুন তারপর উপরের বাটনটি চেপে সরাসরি হোয়াটসএপ এ পাঠিয়ে দিন, সাথে স্ক্রিনশটটি হোয়াটস অ্যাপে পাঠান। অর্ডারটি কনফার্ম করার জন‍্য আপনাকে কল করা হবে । আপনার পেমেন্ট এবং কুরিয়ার এর ঠিকানা রেডি রাখুন। </p>
                             <p style="font-size: 14px;;line-height: 20px;color:#404040;">বিঃদ্রঃ আপনাকে কল করার আগে পেমেন্ট পাঠাবেন না !</p>
