forever app order UI updated

--- a/forever/www/order/items.html
+++ b/forever/www/order/items.html
@@ -2,6 +2,16 @@
 {% extends "templates/web.html" %}
 {% block style %}
 <link rel="stylesheet" href="css/items.css">
+<style>
+    .navbar {
+
+        display: none;
+    }
+    .web-footer {
+
+        display: none;
+    }
+</style>
 {% endblock style %}
 
 {% block page_content %}
