--- a/forever/www/order/brandmaterial.html
+++ b/forever/www/order/brandmaterial.html
@@ -1,11 +1,24 @@
 {% extends "templates/web.html" %}
 {% block style %}
-<link rel="stylesheet" href="css/other.css">
+<link rel="stylesheet" href="css/new-home.css">
+<style>
+    .navbar {
+
+        display: none;
+    }
+    .web-footer {
+
+        display: none;
+    }
+</style>
 {% endblock style %}
 
 {% block page_content %}
-<div class="container">
-    <h2>Brand Material</h2>
+
+<div class="login-wrap">
+    <div class="login-html">
+        <div class="login-form">
+            <h2>Brand Material</h2>
     <div class="brand">
         {% for material in brand_materials %}
         <div class="box">
@@ -25,6 +38,7 @@
     </div>
 
     <p class="credit">Developed by <a href="https://invento.com.bd/">Invento Software Limited</a></p>
+    </div>
 </div>
 
 {% endblock page_content %}
