--- a/forever/www/order/notices.html
+++ b/forever/www/order/notices.html
@@ -1,6 +1,6 @@
 {% extends "templates/web.html" %}
 {% block style %}
-<link rel="stylesheet" href="css/items.css">
+<link rel="stylesheet" href="css/new-home.css">
 <style>
     .navbar {
 
@@ -14,35 +14,44 @@
 {% endblock style %}
 
 {% block page_content %}
-<div class="container">
-    <div class="logo">
-        <a href="/website"><img  src="{{ logo_image }}" alt="Logo"></a>
-    </div>
-    <h2>All Notice</h2>
-    <ul class="notice-list">
-        {% for notice in notices %}
-        <li class="notice-item">
-            <div class="notice-info">
-                <h4 onclick="showPopup(`{{ notice.image }}`)"><a href="#">{{ notice.title }}</a></h4>
-                <div class="notice-date">
-                    <img src="css/images/date.png" alt="Date Icon">
-                    <p>{{ notice.date }}</p>
-                </div>
-            </div>
-            <button class="view-button" onclick="showPopup(`{{ notice.image }}`)">View</button>
-        </li>
-        {% endfor %}
-    </ul>
-    <div class="back">
-        <button><a href="/order/homepage">Back to home</a></button>
-    </div>
-    <p class="credit">Developed by <a href="https://invento.com.bd/">Invento Software Limited</a></p>
-</div>
 
-<div id="popup" class="popup">
-    <div class="popup-content">
-        <span class="close" onclick="closePopup()">&times;</span>
-        <img id="popupImage" src="" alt="Popup Image">
+
+
+<div class="login-wrap">
+    <div class="login-html">
+        <div class="login-form">
+            <!-- <div class="logo">
+                <a href="/website"><img  src="{{ logo_image }}" alt="Logo"></a>
+            </div> -->
+            <h2>All Notice</h2>
+            <ul class="notice-list">
+                {% for notice in notices %}
+                <li class="notice-item">
+                    <div class="notice-info">
+                        <h4 onclick="showPopup(`{{ notice.image }}`)"><a href="#">{{ notice.title }}</a></h4>
+                        <div class="notice-date">
+                            <img src="css/images/date.png" alt="Date Icon">
+                            <p>{{ notice.date }}</p>
+                        </div>
+                    </div>
+                    <button class="view-button" onclick="showPopup(`{{ notice.image }}`)">View</button>
+                </li>
+                {% endfor %}
+            </ul>
+            <div class="back">
+                <button><a href="/order/homepage">Back to home</a></button>
+            </div>
+            <p class="credit">Developed by <a href="https://invento.com.bd/" target="_blank""> Invento Software Limited </a></p>
+            <div id="popup" class="popup">
+                <div class="popup-content">
+                    <span class="close" onclick="closePopup()">&times;</span>
+                    <img id="popupImage" src="" alt="Popup Image">
+                </div>
+            </div> 
+
+        </div>
+
+
     </div>
 </div>
 
