chore: iamge click homepage update.

--- a/forever/www/order/homepage.html
+++ b/forever/www/order/homepage.html
@@ -20,7 +20,7 @@
     <div class="login-html">
         <div class="login-form">
             <div class="logo">
-                <a href="/website"><img  src="{{ logo_image }}" alt="Logo"></a>
+                <a href="/order/homepage"><img  src="{{ logo_image }}" alt="Logo"></a>
             </div>
             <div class="grid">
                 <a href="/order/register">
