items spacing removed and grand totall border issue fixed

--- a/forever/www/order/items.html
+++ b/forever/www/order/items.html
@@ -140,7 +140,7 @@
                                     <div class="Qty">
                                         Quantity : <span id="total-quantity-2">0</span>
                                     </div>
-                                    <div class="amt">
+                                    <div>
                                         CC : <span id="total-cc-2">0</span>
                                     </div>
 
@@ -149,7 +149,7 @@
                                     <div>
                                         Sub-total :  <span id="total-amount-2">0</span>
                                     </div>
-                                    <div class="amt">
+                                    <div>
                                         VAT 5% :  <span id="percent-amount">0</span>
                                     </div>
                                 </div>
