--- a/forever/www/order/register.html
+++ b/forever/www/order/register.html
@@ -40,7 +40,7 @@
             <!-- Step 2 -->
             <div id="step2" class="step">
                 <div class="company-logo">
-                    <a href="/website"><img src="css/images/forever.png" alt="Company Logo"></a>
+                    <a href="/order/homepage"><img src="{{ logo_image }}" alt="Company Logo"></a>
                 </div>
                 <div class="group">
                     <label for="id" class="label">FBO ID<spna style="color: red;"> *</spna></label>
