chore: overview update.

--- a/forever/www/order/homepage.html
+++ b/forever/www/order/homepage.html
@@ -39,7 +39,7 @@
                 <a href="{{ catalouge or '' }}" download >
                     <div class="card">
                         <img src="css/images/brochure.png" alt="Notice">
-                        <p>Catelog</p>
+                        <p>Catalog</p>
                     </div>
                 </a>
         
