chore: customer group fetch issue fix

--- a/forever/www/order/register.html
+++ b/forever/www/order/register.html
@@ -137,7 +137,7 @@
             args: args,
             callback: function(r) {
                 if (r.message.customer_group) {
-                    $('#customerGroup').val(r.message.customer_group);
+                    $('#customerGroup1').val(r.message.customer_group);
                     $('#mobile').val(r.message.mobile);
                     $('#name').val(r.message.name);
                 }
