--- a/forever/www/order/register.html
+++ b/forever/www/order/register.html
@@ -1,4 +1,7 @@
 {% extends "templates/web.html" %}
+{% block title %}
+Forever Bangladesh
+{% endblock %}
 {% block style %}
 <link rel="stylesheet" href="css/items.css">
 <style>
